--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/turismoPorCuencaApp
 excludes=
+file.reference.commons-logging-1.2.jar=C:\\Users\\Usuario\\Downloads\\commons-logging-1.2.jar
 file.reference.Downloads-jxmaps-1.3.2=C:\\Users\\RYZEN 7\\Downloads\\jxmaps-1.3.2
 file.reference.jcalendar-1.4.jar=C:\\Users\\RYZEN 7\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=lib/jcalendar-1.4.jar
+file.reference.json-20240303.jar=C:\\Users\\Usuario\\Downloads\\json-20240303.jar
+file.reference.jxmapviewer2-2.8.jar=C:\\Users\\Usuario\\Downloads\\jxmapviewer2-2.8.jar
 file.reference.swingx-0.9.5.jar=C:\\Users\\RYZEN 7\\Documents\\NetBeansProjects\\SegundoCicloA\\lib\\swingx-0.9.5.jar
 includes=**
 jar.compress=false
@@ -44,7 +47,10 @@ javac.classpath=\
     ${file.reference.Downloads-jxmaps-1.3.2}:\
     ${file.reference.swingx-0.9.5.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.json-20240303.jar}:\
+    ${file.reference.jxmapviewer2-2.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
